--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		Castiel, often shortened to Cas, is a powerful angel of the Lord who was responsible for saving Dean Winchester from Hell, on the archangels' command. It was his job to help prevent Lilith from breaking the 66 Seals that, once broken, would release Lucifer from his cage in Hell. Once Castiel learned that the angels wished to free Lucifer anyway, he defied his angelic brethren and died trying to help Dean prevent Sam Winchester from breaking the last seal.
 		After he was killed by the Archangel Raphael, Castiel was resurrected by God and joined Sam, Dean, and Bobby Singer in a quest to prevent the brothers from becoming the vessels of Michael and Lucifer. Castiel would later be killed by Lucifer but his actions allowed Sam to trap both Archangels away. With the Apocalypse averted, Castiel was again resurrected by God with new powers, being promoted to Seraph. He then started a civil war in Heaven to prevent Raphael from restarting the Apocalypse, Believing he could not be outsmarted by a demon, Castiel teamed up with Crowley to claim the souls of Purgatory. He ended up betraying Crowley and absorbing all the souls, resulting in his powers reaching a level much higher than that of an archangel, but at a high price: the powers that the evil souls granted him had went to Castiel's head, causing him to proclaim himself as the new God.
 		<p></p>
-		<a href="https://supernatural.fandom.com/wiki/Dean_Winchester#cite_note-3">CONTINUE READING...</a>
+		<a href="https://supernatural.fandom.com/wiki/Castiel">CONTINUE READING...</a>
 
 	</div>
 
